--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -10,25 +10,26 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'adopt'
-        cache: maven
-        
+    
     - name: Login to Docker hub
       uses: docker/login-action@v2.0.0
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'adopt'
+        cache: maven
+
     - name: Build application JAR
-    - working-directory: ./newPayment
+    - working-directory: .
       run: mvn clean package 
       
-    - name: Docker Build 
-    - working-directory: ./newPayment
+    - name: Docker Compose Build 
+    - working-directory: .
       run: docker compose build
       
     - name: Push To Docker Hub Container Registry
