--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -25,11 +25,11 @@ jobs:
         cache: maven
 
     - name: Build application JAR
-    - working-directory: .
+    - working-directory: /.
       run: mvn clean package 
       
     - name: Docker Compose Build 
-    - working-directory: .
+    - working-directory: /.
       run: docker image build -t luisstorm/new_payment:latest . 
       
     - name: Push To Docker Hub Container Registry
