--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,22 +1,22 @@
-name: continuous Integration with github actions
+name: Continuous Integration with Github Actions
 
 on:
   push:
-    branches: 
-      - master 
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    
-    - name: Login to Docker hub
+
+    - name: Login to Docker Hub
       uses: docker/login-action@v2.0.0
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-
+    
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
@@ -24,16 +24,17 @@ jobs:
         distribution: 'adopt'
         cache: maven
 
-    - name: Build application JAR
-    - working-directory: /.
-      run: mvn clean package 
-      
-    - name: Docker Compose Build 
-    - working-directory: /.
-      run: docker image build -t luisstorm/new_payment:latest . 
-      
-    - name: Push To Docker Hub Container Registry
+    - name: Build Application JAR
+      working-directory: .
+      run: mvn clean package
+
+    - name: Docker Compose Build
+      working-directory: .
+      run: docker compose build
+
+    - name: Push to Docker Hub Container Registry
       run: |
         docker tag ${{ secrets.DOCKER_USERNAME }}/new_payment:latest ${{ secrets.DOCKER_USERNAME }}/new_payment:${{ github.run_id }}
+
         docker push ${{ secrets.DOCKER_USERNAME }}/new_payment:${{ github.run_id }}
         docker push ${{ secrets.DOCKER_USERNAME }}/new_payment:latest
