--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -25,11 +25,11 @@ jobs:
         cache: maven
 
     - name: Build Application JAR
-      working-directory: .
+      working-directory: ./newPayment
       run: mvn clean package
 
     - name: Docker Compose Build
-      working-directory: .
+      working-directory: ./newPayment
       run: docker compose build
 
     - name: Push to Docker Hub Container Registry
