--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,32 @@ services:
       POSTGRES_PASSWORD: 12345
     ports:
       - "5432:5432"
+    networks:
+      - luis-network
+  new_payment:
+    image: luisstorm/new_payment
+    restart: always
+    container_name: new_payment
+    build: .
+    working_dir: /.
+    environment:
+      SPRING.DATASOURCE.URL: jdbc:postgresql://db:5432/springbootdb?currentSchema=payment
+      SPRING.DATASOURCE.USERNAME: luis
+      SPRING.DATASOURCE.PASSWORD: 12345
+    ports:
+      - "8081:8080"
+    expose:
+      - 8081
+    command: mvn spring-boot:run
+    depends_on:
+      - db
     volumes:
       - "./localenv/db/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql"
-
+    networks:
+      - luis-network
 volumes:
   localstack-vol:
+
+networks:
+  luis-network:
+    driver: bridge
