--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -3,21 +3,37 @@ name: Continuous Integration with Github Actions
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'adopt'
-        cache: maven
+      - uses: actions/checkout@v3
 
-    - name: Build Application JAR
-      working-directory: .
-      run: mvn clean -DskipTests
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2.0.0
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          cache: maven
+
+      - name: Build Application JAR
+        working-directory: ./newPayment
+        run: mvn clean package
+
+      - name: Docker Compose Build
+        working-directory: ./newPayment
+        run: docker compose build
+
+      - name: Push to Docker Hub Container Registry
+        run: |
+          docker tag ${{ secrets.DOCKER_USERNAME }}/new_payment:latest ${{ secrets.DOCKER_USERNAME }}/new_payment:${{ github.run_id }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/new_payment:${{ github.run_id }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/new_payment:latest
