--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     restart: always
     container_name: postgres
     environment:
-      POSTGRES_DB: springbootdb
-      POSTGRES_USER: luis
-      POSTGRES_PASSWORD: 12345
+      POSTGRES_DB: database_spring
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 12345678
     ports:
       - "5432:5432"
     networks:
@@ -19,16 +19,14 @@ services:
     build: .
     working_dir: /.
     environment:
-      SPRING.DATASOURCE.URL: jdbc:postgresql://db:5432/springbootdb?currentSchema=payment
-      SPRING.DATASOURCE.USERNAME: luis
-      SPRING.DATASOURCE.PASSWORD: 12345
+      SPRING.DATASOURCE.URL: jdbc:postgresql://db:5432/database_spring?currentSchema=payment
+      SPRING.DATASOURCE.USERNAME: postgres
+      SPRING.DATASOURCE.PASSWORD: 12345678
     ports:
-      - "8081:8080"
-    expose:
-      - 8081
+      - "8080:8080"
     command: mvn spring-boot:run
-    depends_on:
-      - db
+#    depends_on:
+#      - db
     volumes:
       - "./localenv/db/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql"
     networks:
