--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: payment-ms
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/database_spring?currentSchema=payment
+    url: jdbc:postgresql://database-spring.ckfn4cplhgge.us-east-1.rds.amazonaws.com:5432/database_spring?currentSchema=payment
     username: postgres
     password: 12345678
   flyway:
